<resources>
    <string name="app_name">ThirdProject</string>
        <string name="Mesopotamia">Learning About Mesopotamia</string>
        <string name="enter_name">Enter Your Name:- </string>
        <string name="image">image</string>
        <!-- Start Question 1 -->
        <string name="q1">Q1) Mesopotamia means .....  ?</string>
        <string name="q1_answer1">Between two mountains </string>
        <string name="q1_answer2">Between two rivers </string>
        <string name="q1_answer3">An island</string>
        <!-- End Question 1 -->

        <!-- Start Question 2 -->
        <string name="q2">Q2) Who invented and used the script for the first time?</string>
        <string name="q2_answer1">Sumerian civilization in Iraq</string>
        <string name="q2_answer2">Egyptian civilization in Egypt </string>
        <string name="q2_answer3">Roman civilization in Rome</string>
        <!-- End Question 2 -->

        <!-- Start Question 3 -->
        <string name="q3">Q3) What are the first civilizations in the world?</string>
        <string name="q3_answer1">Egyptian civilization in Egypt</string>
        <string name="q3_answer2">Sumerian civilization in Iraq</string>
        <string name="q3_answer3">Babel Civilization in Iraq</string>
        <!-- End Question 3 -->

        <!-- Start Question 4 -->
        <string name="q4">Q4)Who are the greatest kings of Mesopotamia?</string>
        <string name="q4_answer1">Gilgamesh </string>
        <string name="q4_answer2">Alexander</string>
        <string name="q4_answer3">Hammurabi</string>
        <!-- End Question 4 -->

        <!-- Start Question 5 -->
        <string name="q5">Q5)Know you must now that Mesopotamia located in ?</string>
        <!-- End Question 5 -->

        <!-- Reset Button -->
        <string name="reset">Reset</string>

        <!-- Score Button -->
        <string name="score">Score</string>
</resources>
